--- a/public/output.css
+++ b/public/output.css
@@ -561,8 +561,24 @@ video {
   position: relative;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.left-\[50\%\] {
+  left: 50%;
+}
+
 .bottom-0 {
   bottom: 0px;
+}
+
+.top-\[-7px\] {
+  top: -7px;
+}
+
+.right-\[-7px\] {
+  right: -7px;
 }
 
 .right-\[-50px\] {
@@ -573,16 +589,16 @@ video {
   top: 90px;
 }
 
-.bottom-\[10px\] {
-  bottom: 10px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.bottom-\[2px\] {
+  bottom: 2px;
+}
+
+.bottom-\[11px\] {
+  bottom: 11px;
 }
 
 .top-\[40\%\] {
@@ -597,32 +613,40 @@ video {
   right: -20px;
 }
 
-.top-\[-10px\] {
-  top: -10px;
+.top-\[20px\] {
+  top: 20px;
 }
 
-.right-\[-5px\] {
-  right: -5px;
+.top-\[10px\] {
+  top: 10px;
 }
 
-.top-\[-7px\] {
-  top: -7px;
+.top-\[15px\] {
+  top: 15px;
 }
 
-.right-\[-6px\] {
-  right: -6px;
+.left-\[10px\] {
+  left: 10px;
 }
 
-.right-\[-7px\] {
-  right: -7px;
+.right-\[10px\] {
+  right: 10px;
+}
+
+.right-\[-50\%\] {
+  right: -50%;
+}
+
+.top-\[80px\] {
+  top: 80px;
+}
+
+.right-\[50\%\] {
+  right: 50%;
 }
 
 .right-0 {
   right: 0px;
-}
-
-.bottom-\[2px\] {
-  bottom: 2px;
 }
 
 .z-20 {
@@ -635,6 +659,10 @@ video {
 
 .z-\[100\] {
   z-index: 100;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .float-right {
@@ -662,16 +690,28 @@ video {
   margin-right: 2.5rem;
 }
 
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+
+.mt-\[5px\] {
+  margin-top: 5px;
+}
+
+.mr-\[25px\] {
+  margin-right: 25px;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .mb-\[25px\] {
   margin-bottom: 25px;
 }
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mb-5 {
@@ -690,36 +730,16 @@ video {
   margin-right: 20px;
 }
 
-.mb-\[15px\] {
-  margin-bottom: 15px;
+.mb-\[30px\] {
+  margin-bottom: 30px;
 }
 
-.mb-\[20px\] {
-  margin-bottom: 20px;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.mt-\[10px\] {
-  margin-top: 10px;
-}
-
-.mt-\[5px\] {
-  margin-top: 5px;
-}
-
-.mr-\[30px\] {
-  margin-right: 30px;
-}
-
-.mr-\[25px\] {
-  margin-right: 25px;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -770,6 +790,30 @@ video {
   height: auto;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[18px\] {
+  height: 18px;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
+.h-\[35px\] {
+  height: 35px;
+}
+
+.h-\[320px\] {
+  height: 320px;
+}
+
 .h-\[100\%\] {
   height: 100%;
 }
@@ -782,40 +826,12 @@ video {
   height: 50px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-5 {
   height: 1.25rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-\[8px\] {
-  height: 8px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[18px\] {
-  height: 18px;
-}
-
-.h-\[23px\] {
-  height: 23px;
-}
-
-.h-\[25px\] {
-  height: 25px;
-}
-
-.h-\[35px\] {
-  height: 35px;
 }
 
 .min-h-\[100vh\] {
@@ -828,12 +844,16 @@ video {
   width: fit-content;
 }
 
-.w-full {
-  width: 100%;
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-\[140px\] {
   width: 140px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-\[20px\] {
@@ -848,16 +868,28 @@ video {
   width: 320px;
 }
 
-.w-\[45\%\] {
-  width: 45%;
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[145px\] {
+  width: 145px;
+}
+
+.w-\[25px\] {
+  width: 25px;
+}
+
+.w-\[35px\] {
+  width: 35px;
 }
 
 .w-\[20\.5\%\] {
   width: 20.5%;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-\[60px\] {
@@ -880,52 +912,44 @@ video {
   width: 450px;
 }
 
-.w-\[50px\] {
-  width: 50px;
-}
-
 .w-\[16\%\] {
   width: 16%;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-\[40px\] {
+  width: 40px;
 }
 
-.w-\[80px\] {
-  width: 80px;
+.w-\[85\%\] {
+  width: 85%;
 }
 
-.w-\[310px\] {
-  width: 310px;
+.w-\[95\%\] {
+  width: 95%;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-4 {
+  width: 1rem;
 }
 
-.w-3 {
-  width: 0.75rem;
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.w-\[25px\] {
-  width: 25px;
-}
-
-.w-\[145px\] {
-  width: 145px;
-}
-
-.w-\[35px\] {
-  width: 35px;
+.translate-x-\[50\%\] {
+  --tw-translate-x: 50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
   cursor: pointer;
 }
 
-.items-start {
-  align-items: flex-start;
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -944,14 +968,6 @@ video {
   gap: 1.75rem;
 }
 
-.gap-\[100px\] {
-  gap: 100px;
-}
-
-.gap-\[25px\] {
-  gap: 25px;
-}
-
 .gap-\[15px\] {
   gap: 15px;
 }
@@ -960,24 +976,40 @@ video {
   gap: 20px;
 }
 
-.rounded-full {
-  border-radius: 9999px;
+.gap-\[25px\] {
+  gap: 25px;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+.overscroll-y-auto {
+  overscroll-behavior-y: auto;
+}
+
+.overscroll-y-contain {
+  overscroll-behavior-y: contain;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .border-\[3px\] {
@@ -1011,14 +1043,19 @@ video {
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#ff7d1a\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 125 26 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ffede0\] {
@@ -1040,24 +1077,25 @@ video {
   background-color: rgb(0 0 0 / 0.8);
 }
 
-.bg-red-400 {
+.bg-blue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+.bg-black\/90 {
+  background-color: rgb(0 0 0 / 0.9);
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+.object-cover {
+  object-fit: cover;
 }
 
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+.object-top {
+  object-position: top;
+}
+
+.object-center {
+  object-position: center;
 }
 
 .p-5 {
@@ -1068,14 +1106,34 @@ video {
   padding: 20px;
 }
 
-.px-\[130px\] {
-  padding-left: 130px;
-  padding-right: 130px;
+.px-\[0px\] {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.px-\[70px\] {
-  padding-left: 70px;
-  padding-right: 70px;
+.px-\[7px\] {
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.py-\[0px\] {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .py-\[1px\] {
@@ -1103,54 +1161,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.px-\[2px\] {
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
-.px-\[5px\] {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[7px\] {
-  padding-left: 7px;
-  padding-right: 7px;
-}
-
-.px-\[8px\] {
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-.py-\[0px\] {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.px-\[0px\] {
-  padding-left: 0px;
-  padding-right: 0px;
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .pt-\[80px\] {
@@ -1173,56 +1191,32 @@ video {
   font-size: 1rem;
 }
 
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+
 .text-\[0\.85rem\] {
   font-size: 0.85rem;
-}
-
-.text-\[2\.75rem\] {
-  font-size: 2.75rem;
-}
-
-.text-\[1\.85rem\] {
-  font-size: 1.85rem;
 }
 
 .text-\[0\.9rem\] {
   font-size: 0.9rem;
 }
 
-.text-\[0\.5rem\] {
-  font-size: 0.5rem;
+.text-\[2\.25rem\] {
+  font-size: 2.25rem;
 }
 
-.text-\[0\.4rem\] {
-  font-size: 0.4rem;
+.text-\[1\.85rem\] {
+  font-size: 1.85rem;
 }
 
-.text-\[0\.45rem\] {
-  font-size: 0.45rem;
+.text-\[0\.6rem\] {
+  font-size: 0.6rem;
 }
 
-.text-\[1\.15rem\] {
-  font-size: 1.15rem;
-}
-
-.text-\[1\.1rem\] {
-  font-size: 1.1rem;
-}
-
-.text-\[1\.05rem\] {
-  font-size: 1.05rem;
-}
-
-.text-\[1\.02rem\] {
-  font-size: 1.02rem;
-}
-
-.text-\[0\.8remrem\] {
-  font-size: 0.8remrem;
-}
-
-.text-\[0\.8rem\] {
-  font-size: 0.8rem;
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
 }
 
 .font-\[400\] {
@@ -1251,6 +1245,11 @@ video {
   color: rgb(255 125 26 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-\[\#1d2025\] {
   --tw-text-opacity: 1;
   color: rgb(29 32 37 / var(--tw-text-opacity));
@@ -1259,16 +1258,6 @@ video {
 .text-\[\#b6bcc8\] {
   --tw-text-opacity: 1;
   color: rgb(182 188 200 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .opacity-40 {
@@ -1296,13 +1285,6 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.hover\:scale-\[1\.2\]:hover {
-  --tw-scale-x: 1.2;
-  --tw-scale-y: 1.2;
-  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-\[1\.3\]:hover {
   --tw-scale-x: 1.3;
   --tw-scale-y: 1.3;
@@ -1319,19 +1301,42 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:px-\[130px\] {
-    padding-left: 130px;
-    padding-right: 130px;
+  .md\:absolute {
+    position: absolute;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:fixed {
+    position: fixed;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-\[45\%\] {
@@ -1342,12 +1347,33 @@ video {
     width: 50%;
   }
 
+  .lg\:w-\[150px\] {
+    width: 150px;
+  }
+
+  .lg\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .lg\:w-\[320px\] {
+    width: 320px;
+  }
+
   .lg\:gap-\[100px\] {
     gap: 100px;
   }
 
   .lg\:rounded-2xl {
     border-radius: 1rem;
+  }
+
+  .lg\:bg-black\/80 {
+    background-color: rgb(0 0 0 / 0.8);
+  }
+
+  .lg\:px-\[130px\] {
+    padding-left: 130px;
+    padding-right: 130px;
   }
 
   .lg\:px-\[70px\] {
@@ -1360,7 +1386,25 @@ video {
     padding-right: 0px;
   }
 
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:py-\[22px\] {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
+
+  .lg\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
   .lg\:pt-\[80px\] {
     padding-top: 80px;
+  }
+
+  .lg\:text-\[2\.75rem\] {
+    font-size: 2.75rem;
   }
 }
